# kp-chart

./: .gitignore  Cargo.toml  Makefile  README.md  Web.toml  package-lock.json  package.json  webpack.config.js
docs/: index.html  kp-chart.js  kp-chart.wasm  styles.css
src/: lib.rs  main.rs
src/data/: day.rs  job.rs  mod.rs  person.rs  week.rs
src/web/: chart.rs  mod.rs  people.rs  root.rs
static/: index.html  styles.css
