[package]
name = "kp-chart"
version = "0.2.0"
authors = ["Benjamin Fry <benjaminfry@me.com>"]
edition = "2018"

[lib]
name = "kp_chart"
crate-type = ["cdylib"]

[dependencies]
console_log = "0.1.2"
futures = "0.3.4"
log = "0.4.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
web-sys = { version = "0.3.36", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window', 'RtcDataChannel', 'RtcDataChannelInit', 'RtcPeerConnection', 'RtcSessionDescription', 'RtcSessionDescriptionInit', 'RtcSdpType', 'RtcOfferOptions', 'RtcConfiguration', 'RtcIceTransportPolicy'] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.9"
yew = { version = "0.13.0", features = ["web_sys"] }
